changed list of books, added cover images

--- a/src/main/webapp/css/style.css
+++ b/src/main/webapp/css/style.css
@@ -1,13 +1,14 @@
-
 * {
     box-sizing: border-box;
 }
+
 body {
     font-family: 'Montserrat', sans-serif;
     line-height: 1.6;
     margin: 0;
     min-height: 100px;
 }
+
 ul {
     margin: 0;
     padding: 0;
@@ -28,6 +29,7 @@ a {
     margin-top: 5px;
 
 }
+
 .logo a,
 .main-nav a {
     padding: 10px 15px;
@@ -50,36 +52,31 @@ a {
     padding-bottom: 5px;
     border: 1px solid #a2a2a2;
     background-color: #f4f4f4;
-    -webkit-box-shadow: 0px 0px 14px 0px rgba(0,0,0,0.75);
-    -moz-box-shadow: 0px 0px 14px 0px rgba(0,0,0,0.75);
-    box-shadow: 0px 0px 14px 0px rgba(0,0,0,0.75);
+    -webkit-box-shadow: 0px 0px 14px 0px rgba(0, 0, 0, 0.75);
+    -moz-box-shadow: 0px 0px 14px 0px rgba(0, 0, 0, 0.75);
+    box-shadow: 0px 0px 14px 0px rgba(0, 0, 0, 0.75);
     -webkit-border-radius: 5px;
     -moz-border-radius: 5px;
     border-radius: 5px;
 }
 
-@media (min-width: 769px) {
-    .header,
-    .main-nav {
-        display: flex;
-    }
-    .header {
-        flex-direction: column;
-        align-items: center;
-    }
-    .header{
-        width: 80%;
-        height: 100px;
-        margin: 0 auto;
-    }
+.header,
+.main-nav {
+    display: flex;
 }
 
-@media (min-width: 1025px) {
-    .header {
-        flex-direction: row;
-        justify-content: space-between;
-    }
+.header {
+    width: 80%;
+    height: 100px;
+    margin: 0 auto;
 }
+
+.header {
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+}
+
 
 .search body {
     background-color: white;
@@ -109,4 +106,5 @@ a {
 
 td {
     border: #34495e solid 2px;
+    align-items: center;
 }
