Spring security in progress

--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -104,6 +104,10 @@ a {
     border-radius: 5px;
 }
 
+.catalog .paging {
+    margin: auto;
+}
+
 td {
     border: #34495e solid 1px;
     align-items: center;
